Fixed clipping bugs

--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,14 @@
 body{
-	background: black;
+	background: url("../img/bg.png");
+	position: absolute;
 	margin: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 0;
 }
 
 .header{
-	position: absolute;
+	position: relative;
 	background: linear-gradient(to bottom, #222222, #000000);
 	width: 100%;
 	height: 15%;
@@ -12,6 +16,7 @@ body{
 
 .footer{
 	position: absolute;
+	/*position: device-fixed;*/
 	background: linear-gradient(to top, #101010, #000000);
 	bottom: 0%;
 	width: 100%;
@@ -71,7 +76,7 @@ body{
 	top: 15%;
 	height: 50px;
 	width: 100%;
-	font-family: "Calibri";
+	font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 	color: white;
 	list-style-type: none;
 }
@@ -86,25 +91,9 @@ body{
 	padding-right: 0;
 }
 
-.menu .left-menu>li{
-	cursor: pointer;
-	margin-left: 20px;
-	top: 50%;
-	transform: translateY(-50%);
-	position: relative;
-	display: inline-block;
-	height: 100%;
-	/*min-width: 150px;*/
-	/*width: 110px;*/
-	right: 100px;
-	float: right;
-	/*background-color: white;*/
-	padding-top: 1%;
-}
-
 .menu .right-menu{
 	font-size: 27px;
-	position: relative;
+	position: absolute;
 	height: 100%;
 	width: 50%;
 	left: 50%;
@@ -113,56 +102,53 @@ body{
 	padding-right: 0;
 }
 
-.menu .right-menu>li{
-	overflow: hidden;
+.menu li{
 	cursor: pointer;
-	margin-left: 20px;
-	top: 50%;
-	transform: translateY(-50%);
+	display: table;
+	overflow: hidden;
 	position: relative;
-	display: inline-block;
 	height: 100%;
-	/*min-width: 120px;*/
-	/*min-width: 150px;*/
+	margin-left: 20px;
+}
+
+.menu .left-menu>li{
+	right: 100px;
+	float: right;
+}
+
+.menu .right-menu>li{	
+	height: 100%;
 	left: 75px;
 	float: left;
-	/*background-color: white;*/
-	padding-top: 1%;
 }
 
 .menu span{
+	display: table-cell;
 	position: relative;
-	/*top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);*/
+	vertical-align: middle;
 }
 
 .main-content{
-	padding-top: 100px;
-	padding-left: 10%;
-	padding-right: 10%;
-	position: absolute;
-	z-index: -100;
-	top: 15%;
+	position: relative;
+	top: 110px;
 	width: 100%;
-	height: 75%;
-	background: url("../img/bg.png");
-	box-sizing: border-box;
-	background-repeat: repeat;
-	display: table;
+	height: calc(75% - 110px);
+	display: block;
+	overflow: auto;
 }
 
 .card-menu{
-	display: table-cell;
-	vertical-align: middle;
+	position: relative;
 	text-align: center;
+	transform: translateY(-50%);
+	top: 40%;
 	margin: 0 auto;
 }
 
 .card{
 	user-select: none;
 	cursor: pointer;
-	font-family: "Calibri";
+	font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;;
 	color: white;
 	position: relative;
 	display: inline-block;
@@ -183,7 +169,6 @@ body{
 	display: block;
 	top: 50%;
 	transform: translateY(-50%);
-
 }
 
 .card > div{
